Fixing section without class

--- a/portfolio.html
+++ b/portfolio.html
@@ -19,7 +19,7 @@
         </header>
         <main>
             <img class="main-image" src="img/gears.jpg" alt="Main Content Image">
-            <section>
+            <section class="featured-work">
                 <h2 class="work-title">Featured Work</h2>
                 <div class="container">
                     <!-- Each article is compound by an image, the app name and link-->
